deploy/k8s/airlift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlift
spec:
  selector:
    app: airlift
  ports:
    - name: http
      port: 8443
      targetPort: 8443
